--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,20 @@
     "configurations": [
         {
             "type": "node",
+            "request": "launch",
+            "name": "Debug server",
+            "program": "${workspaceRoot}/node_modules/ts-node/dist/bin.js",
+            "args": [
+                "${workspaceRoot}/src/index.ts"
+            ],
+            "protocol": "inspector",
+            "sourceMaps": true,
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+        {
+            "type": "node",
             "name": "vscode-jest-tests",
             "request": "launch",
             "args": [
