--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "private-survey-server",
   "version": "0.0.1",
   "main": "lib/index.js",
   "scripts": {
@@ -17,20 +17,31 @@
     "node": ">10"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "log4js": "^6.1.2",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.24",
+    "uuid": "^7.0.2"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^8.3.4",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.7",
-    "@typescript-eslint/eslint-plugin": "^2.22.0",
-    "@typescript-eslint/parser": "^2.22.0",
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.3",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^12",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
     "commitlint": "^8.3.5",
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
-    "jest": "^24.9.0",
-    "standard-version": "^7.0.1",
+    "jest": "^25.2.0",
+    "sql.js": "^1.2.1",
+    "standard-version": "^7.1.0",
     "ts-jest": "^25.2.1",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
   "jest": {
