--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "log4js": "^6.1.2",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
@@ -31,6 +32,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.3",
     "@types/jest": "^25.1.4",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
@@ -38,7 +40,7 @@
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
     "jest": "^25.2.0",
-    "sql.js": "^1.2.1",
+    "sqlite3": "^4.1.1",
     "standard-version": "^7.1.0",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.8.1",
